@startuml

class ControllerBase

class MTGContext

class Player {
    + Username: string
    + GamesWon: int
    + GamesLost: int
    + GamesDrawn: int
    + ApiUserId: string
}

class PlayerDto {
    + Username: string
    + GamesWon: int
    + GamesLost: int
    + GamesDrawed: int
}

enum GameResults {
    Win = 1
    Draw = 0
    Loss = -1
}

class MtgController {
    + IsOwnerOrAdmin(resourceApiUserId: string) : bool
}

class PlayerController {
    - context: MTGContext

    + GetProfile(username: string) : Task<ActionResult<PlayerDto>>
    + UpdatePlayerStats(username: string, result: GameResults) : Task<IActionResult>
}

PlayerController --|> MtgController
MtgController --|> ControllerBase

PlayerController --> MTGContext : uses
PlayerController ..> Player : queries
PlayerController ..> PlayerDto : returns
PlayerController ..> GameResults : input

@enduml